--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "@react-pdf/renderer": "^4.3.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-table": "^8.21.2",
     "@tiptap/extension-code-block-lowlight": "^2.11.5",
